--- a/infrastructure-setup/ansible/playbooks/bitbucket.yml
+++ b/infrastructure-setup/ansible/playbooks/bitbucket.yml
@@ -6,9 +6,7 @@
     git_install_from_source: true
     git_install_from_source_force_update: true
     git_version: 2.9.3
-  - role: srsp.oracle-java
-    become: True
+  - role: openjdk
     java_version: 8
-    java_subversion: 181
   - role: local.atlassian_bitbucket
     atlassian_bitbucket_jdbc_password: "{{bitbucket_database_user_password}}"
