--- a/infrastructure-setup/ansible/playbooks/jira.yml
+++ b/infrastructure-setup/ansible/playbooks/jira.yml
@@ -1,9 +1,7 @@
 ---
 - hosts: "{{ target_hosts | default('tag_hostgroup_jira_test') }}" 
   roles:
-  - role: srsp.oracle-java
-    become: True
+  - role: openjdk
     java_version: 8
-    java_subversion: 181
   - role: local.atlassian_jira
     tags: jira
